--- a/spas/package.json
+++ b/spas/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aos": "^2.2.0",
     "compass-mixins": "^0.12.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-page-scroller": "^1.2.0",
     "react-parallax": "^1.6.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
