--- a/package.json
+++ b/package.json
@@ -14,10 +14,23 @@
     "react-scripts": "1.1.1",
     "react-scroll-parallax": "^1.3.3"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/React-BP/SPA-portfolio.git"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "description": "![React](./public/favicon.ico) # SPA : Single Page App ##### Brought to you by Team React BP",
+  "bugs": {
+    "url": "https://github.com/React-BP/SPA-portfolio/issues"
+  },
+  "homepage": "https://github.com/React-BP/SPA-portfolio#readme",
+  "main": "index.js",
+  "devDependencies": {},
+  "author": "Gena Riedler",
+  "license": "MIT"
 }
